<resources>
    <string name="app_name">Cricket Scorecard</string>
    <string name="watch_live">Watch Live</string>
    <string name="scorecard">Scorecard</string>
    <string name="venue">Venue</string>
    <string name="team_2">Team 2</string>
    <string name="live">Live</string>
    <string name="team_1">Team 1</string>
    <string name="series_name">Series Name</string>
    <string name="batsman">Batsman</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="sr">SR</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
