<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/scoreCardCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ff1faa52"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seriesNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/series_name"
                        android:textAlignment="center"
                        android:textColor="#FFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/matchDateTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/series_name"
                        android:textAlignment="center"
                        android:textColor="#a42525"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/teamAIV"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="0dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/bangladesh" />

                        <TextView
                            android:id="@+id/teamATV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/team_1"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!--
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:orientation="vertical">

                                            <TextView
                                                android:id="@+id/teamARunTV"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                android:ellipsize="end"
                                                android:maxLines="1"
                                                android:text="300/6"
                                                android:textAlignment="center"
                                                android:textColor="#000"
                                                android:textSize="16sp" />

                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                android:ellipsize="end"
                                                android:maxLines="1"
                                                android:text="50 ov"
                                                android:textAlignment="center"
                                                android:textColor="#000"
                                                android:textSize="16sp" />
                                        </LinearLayout>
                    -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/footballMatchGoal"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/versus" />

                        <TextView
                            android:id="@+id/statusTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text=""
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/teamBIV"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:src="@drawable/india" />

                        <TextView
                            android:id="@+id/teamBTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/team_2"
                            android:textAlignment="center"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!--
                                        <LinearLayout
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:orientation="vertical">

                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                android:ellipsize="end"
                                                android:maxLines="1"
                                                android:text="300/6"
                                                android:textAlignment="center"
                                                android:textColor="#000"
                                                android:textSize="16sp" />

                                            <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="10dp"
                                                android:ellipsize="end"
                                                android:maxLines="1"
                                                android:text="50 ov"
                                                android:textAlignment="center"
                                                android:textColor="#000"
                                                android:textSize="16sp" />
                                        </LinearLayout>
                    -->


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/matchResultTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="13sp"
                        android:text="@string/venue"
                        android:textAlignment="center"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/venueTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/venue"
                        android:textAlignment="center"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/scoreCardBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_match_card_button_center"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/scorecard"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/liveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/watch_live"
                        android:textAlignment="center"
                        android:textColor="#FFF"
                        android:textSize="16sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>